# axum-demo

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/routes/: hello.rs  mod.rs
entity/: Cargo.toml
entity/src/: post.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
