[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "service", "entity"]

[dependencies]
api = { path = "api" }
entity = { path = "entity" }
service = { path = "service" }
