[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
entity = { path = "../entity" }
anyhow = "1.0.70"
axum = "0.6.16"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["add-extension", "trace"] }
dotenvy = "0.15.7"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
